# scope-control

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: build-test.yaml
src/tds/: __init__.py  __main__.py  scope.py
tests/: test_cli.py
