[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "tds"
authors = [
    { name = "Luis Antonio Obis Aparicio", email = "luis.antonio.obis@gmail.com" },
]
description = "An unofficial Python package ðŸðŸ“¦ to interface with CAEN high voltage power supplies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]
dependencies = [
    "argparse",
    "pyvisa",
    "pyvisa-py",
    "uproot",
    "numpy",
    "matplotlib",
    "psutil",
    "zeroconf",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pre-commit",
]

[project.urls]
"Download" = "https://github.com/lobis/tds-scope/releases"
"Homepage" = "https://github.com/lobis/tds-scope"
"Bug Tracker" = "https://github.com/lobis/tds-scope/issues"

[tool.hatch.version]
path = "src/tds/version.py"
